--- a/shopping-cart/src/components/ViewCart/ViewCart.css
+++ b/shopping-cart/src/components/ViewCart/ViewCart.css
@@ -6,6 +6,8 @@
     position: absolute;
     transform: translate(2rem, 4rem);
     z-index: 3;
+    box-shadow: 4px 4px 20px rgb(0 0 0 / 0.4);
+    visibility: hidden;
 }
 
 .cart-opened h3 {
